# mcp-resk

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.dev.md  README.md  SECURITY.md  config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
examples/: example_server.py
resk_mcp/: __init__.py  auth.py  context.py  dashboard.py  schema_validation.py  security.py  server.py  validation.py
static/: dashboard.html  login.html
tests/: __init__.py  conftest.py  test_auth.py  test_schema_validation.py  test_security.py  test_server.py  test_server_tools.py  test_validation.py
